[metadata]
name = pixsoup
version = 0.1.0

[options]
packages = pixsoup

[options.entry_points]
console_scripts =
  pixsoup = pixsoup.cli:my_function

[options]
install_requires =
  dotmap; python_version == 1.3.30
  gql; python_version == 3.4.0
  graphql; python_version == 0.0.4
  graphql_core; python_version == 3.2.3
  click; python_version == 8.0.4
  clint; python_version == 0.5.1
  python_dateutil; python_version == 2.8.2
  python_magic; python_version == 0.4.27
  requests; python_version == 2.27.1
  usersettings; python_version == 1.1.5